--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@heroicons/react": "^2.2.0",
     "@tanstack/react-query": "^5.83.0",
+    "@types/heatmap.js": "^2.0.41",
     "autoprefixer": "^10.4.21",
     "axios": "^1.10.0",
     "chart.js": "^4.5.0",
